2016-01-19  Liu Xin  <meteor1113@qq.com>

	* init/textmodes/init-org.el ("org"): Fix for yasnippet.

2016-01-09  Liu Xin  <meteor1113@qq.com>

	* init/progmodes/init-haskell.el: Add init-haskell.

	* init/modules/init-toolbar.el: Remove flycheck-clear.xpm

2015-12-31  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Set toolbar for flycheck.

	* init/modules/init-flymake.el: Remove flymake.

	* init/modules/init-flycheck.el: Add flycheck.

2015-12-30  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Remove recent-jump toolbar.

	* init/modules/init-helm.el: Add helm.

	* init/modules/init-toolbar.el (toggle-toolbar-menu): Refactor init-toolbar.

2015-12-28  Liu Xin  <meteor1113@qq.com>

	* init.el: Refactor.

	* init/init-editor.el: Remove htmlize.
	Remove cursor-chg.
	Remove recent-jump.

	* init.el: Split dotemacs.
	Refactor.

2015-12-26  Liu Xin  <meteor1113@qq.com>

	* init-lisp.el: Remove sourcepair.

	* init-basic.el (c-mode-common-hook): Setup ff-find-other-file.

2015-12-25  Liu Xin  <meteor1113@qq.com>

	* init-lisp.el: Remove eim.

	* init-elpa.el: Remove anything.
	("chinese-wbim"): Add chinese-wbim.

	* init-lisp.el: Remove codepilot.

	* init-basic.el (highlight-text): Add highlight-text. Remove smart-hl.

2015-12-24  Liu Xin  <meteor1113@qq.com>

	* init-lisp.el: Remove xgtags.
	Remove winsav.
	Remove word-count.
	Remove vimpulse.
	Remove ifdef.
	Remove code-imports.
	Remove cn-weather.
	Remove doxymacs and doc-mode.

	* init-elpa.el ("rust-mode"): Config rustfmt, racer, ac-racer.
	(rust-mode-hook): Add cargo.
	Add go-mode, go-autocomplete, go-doc, go-snippets.
	: Add ac-clang, Remove auto-complete-clang.
	: Add ggtags.

2015-12-23  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Add rust-mode, rustfmt, racer, ac-racer.

2015-09-08  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el (ecb-symboldef-find-tag-by-etags): Disable etags's
	'Visit tags tagle' dialog when ecb's symboldef is actived.
